@@ -2,8 +2,8 @@
  * Copyright Camunda Services GmbH and/or licensed to Camunda Services GmbH under
  * one or more contributor license agreements. See the NOTICE file distributed
  * with this work for additional information regarding copyright ownership.
- * Licensed under the Zeebe Community License 1.1. You may not use this file
- * except in compliance with the Zeebe Community License 1.1.
+ * Licensed under the Camunda License 1.0. You may not use this file
+ * except in compliance with the Camunda License 1.0.
  */
 package io.camunda.zeebe.engine.processing.bpmn.gateway;
 
@@ -12,6 +12,7 @@ import io.camunda.zeebe.engine.processing.bpmn.BpmnElementContext;
 import io.camunda.zeebe.engine.processing.bpmn.BpmnElementProcessor;
 import io.camunda.zeebe.engine.processing.bpmn.behavior.BpmnBehaviors;
 import io.camunda.zeebe.engine.processing.bpmn.behavior.BpmnIncidentBehavior;
+import io.camunda.zeebe.engine.processing.bpmn.behavior.BpmnJobBehavior;
 import io.camunda.zeebe.engine.processing.bpmn.behavior.BpmnStateTransitionBehavior;
 import io.camunda.zeebe.engine.processing.common.ExpressionProcessor;
 import io.camunda.zeebe.engine.processing.common.Failure;
@@ -31,12 +32,14 @@ public final class ExclusiveGatewayProcessor
   private final BpmnStateTransitionBehavior stateTransitionBehavior;
   private final BpmnIncidentBehavior incidentBehavior;
   private final ExpressionProcessor expressionBehavior;
+  private final BpmnJobBehavior jobBehavior;
 
   public ExclusiveGatewayProcessor(
       final BpmnBehaviors behaviors, final BpmnStateTransitionBehavior stateTransitionBehavior) {
+    this.stateTransitionBehavior = stateTransitionBehavior;
     expressionBehavior = behaviors.expressionBehavior();
     incidentBehavior = behaviors.incidentBehavior();
-    this.stateTransitionBehavior = stateTransitionBehavior;
+    jobBehavior = behaviors.jobBehavior();
   }
 
   @Override
@@ -45,7 +48,7 @@ public final class ExclusiveGatewayProcessor
   }
 
   @Override
-  public Either<Failure, ?> onActivate(
+  public Either<Failure, ?> finalizeActivation(
       final ExecutableExclusiveGateway element, final BpmnElementContext activating) {
     // find outgoing sequence flow with fulfilled condition or the default (or none if implicit end)
     return findSequenceFlowToTake(element, activating)
@@ -65,7 +68,7 @@ public final class ExclusiveGatewayProcessor
   }
 
   @Override
-  public Either<Failure, ?> onComplete(
+  public Either<Failure, ?> finalizeCompletion(
       final ExecutableExclusiveGateway element, final BpmnElementContext context) {
     throw new UnsupportedOperationException(
         String.format(
@@ -76,6 +79,10 @@ public final class ExclusiveGatewayProcessor
   @Override
   public void onTerminate(
       final ExecutableExclusiveGateway element, final BpmnElementContext context) {
+    if (element.hasExecutionListeners()) {
+      jobBehavior.cancelJob(context);
+    }
+
     incidentBehavior.resolveIncidents(context);
     final var terminated =
         stateTransitionBehavior.transitionToTerminated(context, element.getEventType());
@@ -91,9 +98,12 @@ public final class ExclusiveGatewayProcessor
     }
 
     final var outgoingSequenceFlows = element.getOutgoing();
-    if (outgoingSequenceFlows.size() == 1 && outgoingSequenceFlows.get(0).getCondition() == null) {
-      // only one flow without a condition, can just be taken
-      return Either.right(Optional.of(element.getOutgoing().get(0)));
+    if (outgoingSequenceFlows.size() == 1) {
+      final var singleOutgoingSequenceFlow = outgoingSequenceFlows.getFirst();
+      if (singleOutgoingSequenceFlow.getCondition() == null) {
+        // only one flow without a condition, can just be taken
+        return Either.right(Optional.of(singleOutgoingSequenceFlow));
+      }
     }
 
     for (final ExecutableSequenceFlow sequenceFlow : element.getOutgoingWithCondition()) {
