@@ -2,39 +2,48 @@
  * Copyright Camunda Services GmbH and/or licensed to Camunda Services GmbH under
  * one or more contributor license agreements. See the NOTICE file distributed
  * with this work for additional information regarding copyright ownership.
- * Licensed under the Zeebe Community License 1.1. You may not use this file
- * except in compliance with the Zeebe Community License 1.1.
+ * Licensed under the Camunda License 1.0. You may not use this file
+ * except in compliance with the Camunda License 1.0.
  */
 package io.camunda.zeebe.it.util;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 import io.camunda.zeebe.client.ZeebeClient;
+import io.camunda.zeebe.client.api.command.DeployResourceCommandStep1;
 import io.camunda.zeebe.client.api.response.DeploymentEvent;
 import io.camunda.zeebe.client.api.response.PartitionInfo;
 import io.camunda.zeebe.client.api.response.Topology;
 import io.camunda.zeebe.model.bpmn.Bpmn;
 import io.camunda.zeebe.model.bpmn.BpmnModelInstance;
 import io.camunda.zeebe.model.bpmn.builder.ServiceTaskBuilder;
+import io.camunda.zeebe.model.bpmn.builder.UserTaskBuilder;
 import io.camunda.zeebe.protocol.record.Record;
 import io.camunda.zeebe.protocol.record.intent.CommandDistributionIntent;
 import io.camunda.zeebe.protocol.record.intent.DeploymentIntent;
 import io.camunda.zeebe.protocol.record.intent.JobIntent;
 import io.camunda.zeebe.protocol.record.intent.UserTaskIntent;
 import io.camunda.zeebe.test.util.record.RecordingExporter;
+import io.camunda.zeebe.util.CloseableSilently;
 import java.time.Duration;
 import java.util.List;
 import java.util.function.Consumer;
+import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.awaitility.Awaitility;
 
-public class ZeebeResourcesHelper {
+public class ZeebeResourcesHelper implements CloseableSilently {
 
   private final ZeebeClient client;
 
   public ZeebeResourcesHelper(final ZeebeClient client) {
     this.client = client;
+  }
+
+  @Override
+  public void close() {
+    client.close();
   }
 
   public void waitUntilDeploymentIsDone(final long key) {
@@ -128,20 +137,33 @@ public class ZeebeResourcesHelper {
         .done();
   }
 
+  public long deployProcess(final BpmnModelInstance modelInstance, final boolean useRest) {
+    return deployProcess(modelInstance, "", useRest);
+  }
+
   public long deployProcess(final BpmnModelInstance modelInstance) {
     return deployProcess(modelInstance, "");
   }
 
   public long deployProcess(final BpmnModelInstance modelInstance, final String tenantId) {
+    return deployProcess(modelInstance, tenantId, false);
+  }
+
+  public long deployProcess(
+      final BpmnModelInstance modelInstance, final String tenantId, final boolean useRest) {
     final DeploymentEvent deploymentEvent =
-        client
-            .newDeployResourceCommand()
+        getDeployCommand(useRest)
             .addProcessModel(modelInstance, "process.bpmn")
             .tenantId(tenantId)
             .send()
             .join();
     waitUntilDeploymentIsDone(deploymentEvent.getKey());
-    return deploymentEvent.getProcesses().get(0).getProcessDefinitionKey();
+    return deploymentEvent.getProcesses().getFirst().getProcessDefinitionKey();
+  }
+
+  private DeployResourceCommandStep1 getDeployCommand(final boolean useRest) {
+    final DeployResourceCommandStep1 deployResourceCommand = client.newDeployResourceCommand();
+    return useRest ? deployResourceCommand.useRest() : deployResourceCommand.useGrpc();
   }
 
   public long createProcessInstance(final long processDefinitionKey, final String variables) {
@@ -169,12 +191,21 @@ public class ZeebeResourcesHelper {
         .getProcessInstanceKey();
   }
 
+  public long createSingleUserTask(final UnaryOperator<UserTaskBuilder> userTaskBuilderFunction) {
+    return createSingleUserTask("", userTaskBuilderFunction);
+  }
+
   public long createSingleUserTask() {
     return createSingleUserTask("");
   }
 
   public long createSingleUserTask(final String tenantId) {
-    final var modelInstance = createSingleUserTaskModelInstance();
+    return createSingleUserTask(tenantId, UnaryOperator.identity());
+  }
+
+  public long createSingleUserTask(
+      final String tenantId, final UnaryOperator<UserTaskBuilder> userTaskBuilderFunction) {
+    final var modelInstance = createSingleUserTaskModelInstance(userTaskBuilderFunction);
     final var processDefinitionKey = deployProcess(modelInstance, tenantId);
     final var processInstanceKey = createProcessInstance(processDefinitionKey, "{}", tenantId);
     final var userTaskKey =
@@ -189,10 +220,11 @@ public class ZeebeResourcesHelper {
     return userTaskKey;
   }
 
-  public BpmnModelInstance createSingleUserTaskModelInstance() {
+  public BpmnModelInstance createSingleUserTaskModelInstance(
+      final UnaryOperator<UserTaskBuilder> userTaskBuilderFunction) {
     return Bpmn.createExecutableProcess("process")
         .startEvent("start")
-        .userTask("task")
+        .userTask("task", t -> userTaskBuilderFunction.apply(t.zeebeUserTask()))
         .zeebeUserTask()
         .endEvent("end")
         .done();
